--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
